[package]
name = "cosmic-bg"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[features]
default = ["animated"]
animated = ["dep:gstreamer", "dep:gstreamer-allocators", "dep:gstreamer-app", "dep:gstreamer-video", "dep:libavif-sys"]

[dependencies]
# Calloop with signal handling for graceful shutdown
calloop = { version = "0.14", features = ["signals"] }
color-eyre = "0.6.5"
colorgrad = { workspace = true }
cosmic-bg-config = { path = "./config" }
# Directory utilities for cache paths
dirs = "6.0"
drm-fourcc = "2.2"
eyre = "0.6.12"
# libavif-sys for animated AVIF (AVIS) CPU decoding
libavif-sys = { version = "0.17", optional = true, default-features = false, features = ["codec-dav1d"] }
# For DMA-BUF file descriptor duplication
nix = { version = "0.29", features = ["fs"] }
fast_image_resize = { version = "5.1.4", features = ["image"] }
# GStreamer for hardware-accelerated video decoding (VAAPI, NVDEC, etc.)
gstreamer = { version = "0.24", optional = true }
gstreamer-allocators = { version = "0.24", optional = true }
gstreamer-app = { version = "0.24", optional = true, features = ["v1_24"] }
gstreamer-video = { version = "0.24", optional = true }
# avif-native required for decoding AVIF (avif is for encoding only)
image = { workspace = true, features = ["avif-native", "hdr", "jpeg", "png", "rayon", "webp"] }
jxl-oxide = { version = "0.12.4", features = ["image"] }
notify = "8.2.0"
rand = "0.9.2"
rayon = "1.11"
sctk = { package = "smithay-client-toolkit", version = "0.20.0" }
tracing = { workspace = true }
tracing-subscriber = "0.3.20"
walkdir = "2.5"
# Wayland protocols for DMA-BUF support
wayland-protocols = { version = "0.32", features = ["client"] }

[workspace]
members = ["config"]

[workspace.dependencies]
colorgrad = "0.7.2"
image = { version = "0.25.6", default-features = false }
tracing = "0.1.41"

[dependencies.cosmic-config]
git = "https://github.com/pop-os/libcosmic"
features = ["calloop"]

[profile.release]
opt-level = 3
lto = "thin"
