[package]
name = "cosmic-bg"
version = "1.0.3"
edition = "2024"
rust-version = "1.90"

[dependencies]
color-eyre = "0.6.5"
colorgrad = { workspace = true }
cosmic-bg-config = { path = "./config" }
eyre = "0.6.12"
fast_image_resize = { version = "6.0.0", features = ["image"] }
image = { workspace = true, features = ["hdr", "jpeg", "png", "rayon", "webp"] }
rayon = "1.11"
jxl-oxide = { version = "0.12.5", features = ["image"] }
notify = "8.2.0"
rand = "0.9.2"
sctk = { package = "smithay-client-toolkit", version = "0.20.0" }
tracing = { workspace = true }
tracing-subscriber = "0.3.22"
walkdir = "2.5"

[workspace]
members = ["config"]

[workspace.dependencies]
colorgrad = "0.8.0"
image = { version = "0.25.9", default-features = false }
tracing = "0.1.44"

[dependencies.cosmic-config]
git = "https://github.com/pop-os/libcosmic"
features = ["calloop"]

[profile.release]
opt-level = 3
