[package]
name = "cosmic-bg-config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.63"
ron = "0.8.0"
serde = { version = "1.0.144", features = ["derive"] }
xdg = "2.4.1"
dirs = "4.0"
xdg-user = "0.2.1"
