[package]
name = "cosmic-bg-config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ron = "0.8.0"
serde = { version = "1.0.144", features = ["derive"] }
cosmic-config = { git = "https://github.com/pop-os/libcosmic" }
image = "0.24"
